@@ -1,8 +1,9 @@
 ======= 2.8.0
 
-- updated: `controller.view()` can render a view from URL address
+- updated: (IMPORTANT) packages compress/decompress function supports streaming data
+- updated: `controller.view(name/url, [model], [headers], [partial])` can render a view from URL address
 - updated: `F.backup()` argument `path` can contain `String Array` file list
-- updated: `F.backup()` streams the files
+- updated: `controller.viewCompile(body, model, [headers], [partial], [cacheKey])` add a cache key
 
 ======= 2.7.0
 
